--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,8 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>dousheng</name>
     <description>dousheng</description>
+    <packaging>jar</packaging>
+
     <properties>
         <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -77,6 +79,22 @@
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
 
+        <!--Bcrypt密码加密-->
+        <dependency>
+            <groupId>org.mindrot</groupId>
+            <artifactId>jbcrypt</artifactId>
+            <version>0.4</version>
+        </dependency>
+
+        <!--fastjson-->
+        <dependency>
+            <groupId>com.alibaba.fastjson2</groupId>
+            <artifactId>fastjson2</artifactId>
+            <version>2.0.26</version>
+        </dependency>
+
+
+
 
     </dependencies>
 
@@ -110,7 +128,6 @@
                 <version>${spring-boot.version}</version>
                 <configuration>
                     <mainClass>com.zzqedu.dousheng.DoushengApplication</mainClass>
-                    <skip>true</skip>
                 </configuration>
                 <executions>
                     <execution>
