--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Setup Java
       uses: actions/setup-java@v2
       with:
-        java-version: '8'
+        java-version: '11'
 
     - name: Build and package with Maven
       run: mvn package -DskipTests=true
@@ -25,8 +25,8 @@ jobs:
     - name: Deploy with SCP
       uses: appleboy/scp-action@master
       with:
-        host: ${{ 39.105.113.51 }}
-        username: ${{ root }}
-        password: ${{ ZZQ0902zzq }}
+        host: ${{ secrets.SERVER_HOST }}
+        username: ${{ secrets.SERVER_USERNAME }}
+        password: ${{ secrets.SERVER_PASSWORD }}
         source: "target/my-app.jar"
         target: "/home/my-app/my-app.jar"
