--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,8 +16,8 @@ jobs:
       - name: Set up JDK
         uses: actions/setup-java@v2
         with:
+          distribution: 'zulu'
           java-version: '8'
-          distribution: 'amazon-corretto@1.8'
 
       - name: Build with Maven
         run: mvn clean package
