--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,7 @@ jobs:
           java-version: '8'
 
       - name: Build with Maven
-        run: mvn clean package
+        run: mvn clean package -DfinalName=app
 
       - name: Copy Jar to Server
         uses: appleboy/scp-action@master
@@ -28,7 +28,7 @@ jobs:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USERNAME }}
           key: ${{ secrets.SERVER_KEY }}
-          source: target/*.jar
+          source: target/app.jar
           target: /home/springboot/dousheng/test/app.jar
 
       - name: SSH into Server and start the application
