--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,8 +28,8 @@ jobs:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USERNAME }}
           key: ${{ secrets.SERVER_KEY }}
-          source: target/app.jar
-          target: /home/springboot/dousheng/test/app.jar
+          source: target/dousheng-0.0.1-SNAPSHOT.jar
+          target: /home/springboot/dousheng/test/dousheng-0.0.1-SNAPSHOT.jar
 
       - name: SSH into Server and start the application
         uses: appleboy/ssh-action@master
@@ -39,4 +39,4 @@ jobs:
           key: ${{ secrets.SERVER_KEY }}
           script: |
             cd /home/springboot/dousheng/test/
-            java -jar app.jar
+            java -jar dousheng-0.0.1-SNAPSHOT.jar
