--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,8 +28,8 @@ jobs:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USERNAME }}
           key: ${{ secrets.SERVER_KEY }}
-          source: ./target/dousheng-0.0.1-SNAPSHOT.jar #默认为artifactId-version
-          target: /home/springboot/dousheng/test/dousheng-0.0.1-SNAPSHOT.jar
+          source: target/dousheng-0.0.1-SNAPSHOT.jar #默认为artifactId-version
+          target: /home/springboot/dousheng/test/
 
       - name: SSH into Server and start the application
         uses: appleboy/ssh-action@master
@@ -38,5 +38,5 @@ jobs:
           username: ${{ secrets.SERVER_USERNAME }}
           key: ${{ secrets.SERVER_KEY }}
           script: |
-            cd /home/springboot/dousheng/test/
+            cd /home/springboot/dousheng/test/target/
             java -jar dousheng-0.0.1-SNAPSHOT.jar
