--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,4 +39,4 @@ jobs:
           key: ${{ secrets.SERVER_KEY }}
           script: |
             cd /home/springboot/dousheng/test/target/
-            java -jar dousheng-0.0.1-SNAPSHOT.jar
+            nohup java -jar dousheng-0.0.1-SNAPSHOT.jar &
