--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,7 +28,7 @@ jobs:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USERNAME }}
           key: ${{ secrets.SERVER_KEY }}
-          source: dousheng-0.0.1-SNAPSHOT.jar #默认为artifactId-version
+          source: /target/dousheng-0.0.1-SNAPSHOT.jar #默认为artifactId-version
           target: /home/springboot/dousheng/test/
 
       - name: SSH into Server and start the application
@@ -38,5 +38,5 @@ jobs:
           username: ${{ secrets.SERVER_USERNAME }}
           key: ${{ secrets.SERVER_KEY }}
           script: |
-            cd /home/springboot/dousheng/test/
+            cd /home/springboot/dousheng/test/target/
             nohup java -jar dousheng-0.0.1-SNAPSHOT.jar &
