--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
           username: ${{ secrets.SERVER_USERNAME }}
           key: ${{ secrets.SERVER_KEY }}
           source: target/dousheng-0.0.1-SNAPSHOT.jar #默认为artifactId-version
-          target: /home/springboot/dousheng/test/dousheng-0.0.1-SNAPSHOT.jar
+          target: /home/springboot/dousheng/test/
 
       - name: SSH into Server and start the application
         uses: appleboy/ssh-action@master
@@ -38,5 +38,5 @@ jobs:
           username: ${{ secrets.SERVER_USERNAME }}
           key: ${{ secrets.SERVER_KEY }}
           script: |
-            cd /home/springboot/dousheng/test/
+            cd /home/springboot/dousheng/test/target/
             nohup java -jar dousheng-0.0.1-SNAPSHOT.jar &
