--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,4 +40,12 @@ jobs:
           script: |
             cd /home/springboot/dousheng/test/target/
             pgrep -f dousheng-0.0.1-SNAPSHOT.jar | xargs -r kill -9
+
+      - name: run the jar
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USERNAME }}
+          key: ${{ secrets.SERVER_KEY }}
+          script: |
             nohup java -jar dousheng-0.0.1-SNAPSHOT.jar >/dev/null 2>&1 &
