--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,5 +39,5 @@ jobs:
           key: ${{ secrets.SERVER_KEY }}
           script: |
             cd /home/springboot/dousheng/test/target/
-            pgrep -f dousheng-0.0.1-SNAPSHOT.jar | xargs -r kill -9
+            pgrep -f dousheng-0.0.1-SNAPSHOT.jar | xargs -r kill -9 | exit 0 
             nohup java -jar dousheng-0.0.1-SNAPSHOT.jar >/dev/null 2>&1 &
