--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,43 +1,43 @@
-name: Deploy to Server
-
-on:
-  push:
-    branches:
-      - main
-
-jobs:
-  build:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Set up JDK
-        uses: actions/setup-java@v2
-        with:
-          distribution: 'zulu'
-          java-version: '8'
-
-      - name: Build with Maven
-        run: mvn clean package
-
-      - name: Copy Jar to Server
-        uses: appleboy/scp-action@master
-        with:
-          host: ${{ secrets.SERVER_HOST }}
-          username: ${{ secrets.SERVER_USERNAME }}
-          key: ${{ secrets.SERVER_KEY }}
-          source: target/dousheng-0.0.1-SNAPSHOT.jar #默认为artifactId-version
-          target: /home/springboot/dousheng/test/
-
-      - name: SSH into Server and start the application
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.SERVER_HOST }}
-          username: ${{ secrets.SERVER_USERNAME }}
-          key: ${{ secrets.SERVER_KEY }}
-          script: |
-            cd /home/springboot/dousheng/test/target/
-            pgrep -f dousheng-0.0.1-SNAPSHOT.jar | xargs -r kill -9 || true
-            nohup java -jar dousheng-0.0.1-SNAPSHOT.jar >/dev/null 2>&1 &
+#name: Deploy to Server
+#
+#on:
+#  push:
+#    branches:
+#      - main
+#
+#jobs:
+#  build:
+#    runs-on: ubuntu-latest
+#
+#    steps:
+#      - name: Checkout code
+#        uses: actions/checkout@v2
+#
+#      - name: Set up JDK
+#        uses: actions/setup-java@v2
+#        with:
+#          distribution: 'zulu'
+#          java-version: '8'
+#
+#      - name: Build with Maven
+#        run: mvn clean package
+#
+#      - name: Copy Jar to Server
+#        uses: appleboy/scp-action@master
+#        with:
+#          host: ${{ secrets.SERVER_HOST }}
+#          username: ${{ secrets.SERVER_USERNAME }}
+#          key: ${{ secrets.SERVER_KEY }}
+#          source: target/dousheng-0.0.1-SNAPSHOT.jar #默认为artifactId-version
+#          target: /home/springboot/dousheng/test/
+#
+#      - name: SSH into Server and start the application
+#        uses: appleboy/ssh-action@master
+#        with:
+#          host: ${{ secrets.SERVER_HOST }}
+#          username: ${{ secrets.SERVER_USERNAME }}
+#          key: ${{ secrets.SERVER_KEY }}
+#          script: |
+#            cd /home/springboot/dousheng/test/target/
+#            pkill -f dousheng-0.0.1-SNAPSHOT.jar
+#            nohup java -jar dousheng-0.0.1-SNAPSHOT.jar >/dev/null 2>&1 &
