--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,7 @@
     </dependencyManagement>
 
     <build>
+        <finalName>dousheng</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
