fix:修改deploy.yml

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,7 @@ jobs:
           port: ${{ secrets.PORT }}
           command_timeout: 20s
           script: |
-            cd /www/test
+            cd /www/test/target
             ps -ef | grep dousheng.jar | grep -v grep | awk '{print $2}' | xargs kill -9 
             nohup java -jar dousheng.jar --spring.profiles.active=pro > nohup.out &
             pwd
