--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,43 +1,42 @@
-#name: Deploy to Server
-#
-#on:
-#  push:
-#    branches:
-#      - main
-#
-#jobs:
-#  build:
-#    runs-on: ubuntu-latest
-#
-#    steps:
-#      - name: Checkout code
-#        uses: actions/checkout@v2
-#
-#      - name: Set up JDK
-#        uses: actions/setup-java@v2
-#        with:
-#          distribution: 'zulu'
-#          java-version: '8'
-#
-#      - name: Build with Maven
-#        run: mvn clean package
-#
-#      - name: Copy Jar to Server
-#        uses: appleboy/scp-action@master
-#        with:
-#          host: ${{ secrets.SERVER_HOST }}
-#          username: ${{ secrets.SERVER_USERNAME }}
-#          key: ${{ secrets.SERVER_KEY }}
-#          source: target/dousheng-0.0.1-SNAPSHOT.jar #默认为artifactId-version
-#          target: /home/springboot/dousheng/test/
-#
-#      - name: SSH into Server and start the application
-#        uses: appleboy/ssh-action@master
-#        with:
-#          host: ${{ secrets.SERVER_HOST }}
-#          username: ${{ secrets.SERVER_USERNAME }}
-#          key: ${{ secrets.SERVER_KEY }}
-#          script: |
-#            cd /home/springboot/dousheng/test/target/
-#            pkill -f dousheng-0.0.1-SNAPSHOT.jar
-#            nohup java -jar dousheng-0.0.1-SNAPSHOT.jar >/dev/null 2>&1 &
+name: lane build and upload
+
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches: [main]
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-java@master
+        with:
+          java-version: 8
+          distribution: "adopt"
+          cache: maven
+      - run: mvn clean -DfinalName=dousheng package --file pom.xml
+      - name: copy file
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          port: ${{ secrets.PORT }}
+          key: ${{ secrets.KEY }}
+          source: "target/dousheng.jar"
+          rm: true
+          target: "/www/test"
+      - name: Deploy
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.KEY }}
+          port: ${{ secrets.PORT }}
+          command_timeout: 20s
+          script: |
+            cd /www/test/target
+            ps -ef | grep dousheng.jar | grep -v grep | awk '{print $2}' | xargs kill -9 
+            nohup java -jar dousheng.jar --spring.profiles.active=pro > nohup.out &
+            exit
