add: 登陆、注册、获取用户信息、登陆鉴权

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,5 +38,5 @@ jobs:
           script: |
             cd /home/springboot/dousheng/target/
             ps -ef | grep dousheng.jar | grep -v grep | awk '{print $2}' | xargs kill -9 
-            nohup java -jar dousheng.jar --spring.profiles.active=pro > nohup.out &
+            nohup java -jar dousheng.jar --spring.profiles.active=prod > nohup.out &
             exit
